src/public/style.css
body {
  background-color: #444;
  color: yellow;
  overflow: hidden;
}

#tracks {
  display: grid;
  grid-template-columns: max-content auto;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  gap: .5em 1em;
  user-select: none;
}

.timeline {
  background-color: #aaa;
  position: relative;
  overflow: hidden;
}

.timeline span {
  display: block;
  position: absolute;
  width: 20vw; /* TODO: Set depending on width and height */
  height: 100%;
  background-color: yellow;
}

.timeline span::before {
  content: "";
  position: absolute;
  /* background-color: red; */
  height: 100%;
  width: 8px;
  cursor: ew-resize;
}

.timeline span::after {
  content: "";
  position: absolute;
  right: 0;
  /* background-color: green; */
  height: 100%;
  width: 8px;
  cursor: ew-resize;
}

.timeline span.selected.resize {
  cursor: ew-resize;
}

.timeline span.selected.move {
  cursor: move;
}

#scroller {
  grid-column: 1 / 3;
  background-color: #333;
  border-radius: 1em;
  width: 100%;
  height: 16px;
  position: relative;
}

#scrollbar {
  position: absolute;
  /* Width and left is configured by the zoomfactor! */
  height: 16px;
  font-size: 16px;
  line-height: 16px;
  color: #eee;
  background-color: #666;
  border-radius: 1em;
  font-weight: bold;
  display: flex;
  justify-content: space-between;
  cursor: grab;
}
#scrollbar.grabbing {
  cursor: grabbing;
}

/* buttons */
#controls {
  display: flex;
  gap: 2px;
  align-items: stretch;
}
button {
  min-width: 52px;
}
button#zoom_in .symbol {
  font-size: 120%;
}

